Update product image upload and frontend integration